--- a/index.html
+++ b/index.html
@@ -15,11 +15,29 @@
         <nav>
             <img src="./images/studentmedialogo.png" class="logo",  width="200">
             <ul>
-                <li><a href=""><h1 class="neonText">Home</h1></a></li>
-                <li><a href=""><h1 class="neonText">About</h1></a></li>
-                <li><a href=""><h1 class="neonText">Contact</h1></a></li>
+                <li><a href=""><h1 class="neonTextBlue">Home</h1></a></li>
+                <li><a href=""><h1 class="neonTextBlue">About</h1></a></li>
+                <li><a href=""><h1 class="neonTextBlue">Contact</h1></a></li>
+               
             </ul>
         </nav>
+        <h1 class="neonTextPink">
+            Student Media <br>Exhibtion
+        </h1>
+        <button type="neon" onclick="window.location.href = 'https://www.pdx.edu/student-media/';">
+            Upcoming event &#x27F6</button>
+
+        <div class="indicator">
+            <span></span>
+            <span></span>
+            <span class="active"></span>
+        </div>
+        <div class ="cta">
+            <p>Student Media has a wide range of opportunities with different levels of commitment.
+                 Find one that fits your schedule, as well as your interests.</p>
+                 <button type="neon" onclick="window.location.href = 'https://www.pdx.edu/student-media/get-involved';">
+                    GET INVOLVED &#x27F6</button>
+        </div>
     </div>
 
  
